# keiki

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  cabal.project  flake.nix  keiki.cabal  mina.kdl  mori.dhall  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.seihou/: config.dhall  manifest.json
bench/: Bench.hs
docs/adr/: 0001-structural-re-indexing-for-sound-replay.md  0002-event-logs-must-reproduce-forward-state.md  0003-proof-gates-fail-conservatively.md  0004-composition-uses-snapshot-updates-and-checked-boundaries.md  0005-persisted-wire-identities-are-explicit-and-versioned.md  README.md
docs/foundations/: 00-reading-guide.md  01-problem-space.md  02-event-sourcing-and-the-decider.md  03-finite-automata-and-transducers.md  04-projections-and-deriving-event-sourcing.md  05-data-carrying-alphabets.md  06-where-to-go-next.md
docs/guide/: ast-drop-down.md  b-views.md  composition.md  deriving-lifecycle-transitions.md  generic-lens-and-label-reads.md  loan-application-tutorial.md  mermaid-rendering.md  modeling-collections.md  multi-event-commands.md  output-invertibility.md  profunctor.md  symbolic-ci.md  user-guide.md  why-smt.md
docs/historical/: README.md  core-design-transducer-as-source-of-truth.md  dsl-shape-for-symbolic-register.md  future-directions-profunctors-effects-and-composition.md  v1-escape-hatch-retirements-design.md  workflow-modeling-approvals-pipelines-and-human-in-the-loop-as-transducers.md
docs/masterplans/: 1-validate-symbolic-register-direction-via-haskell-prototype.md  10-mermaid-topology-renderer-for-symtransducer.md  11-keiki-codec-json-package-implementation-and-rollout.md  12-symbolic-arithmetic-terms-translator-memoization-and-real-boolalg-sat-witnesses.md  13-keiki-api-improvements-surfaced-by-the-rei-migration.md  14-keiki-and-keiki-codec-json-dsl-improvements-surfaced-by-the-seihou-consumer-audit.md  15-keiki-mermaid-diagram-and-documentation-rendering-improvements-surfaced-by-the-seihou-diagram-audit.md  16-harden-keiki-correctness-and-api-surfaces-surfaced-by-the-2026-07-architecture-review.md  2-retire-v1-escape-hatches-in-pure-core-tinpproj-sbv-boolalg.md  3-keiki-generics-dx-follow-ups.md  4-composition-combinators-on-symtransducer.md  5-acceptor-projections-and-genview-th-splice-for-b-presentation.md  6-retire-remaining-v1-escape-hatches-in-pure-core-ofn-pmatchc-unsafecombine-static-check.md  7-multi-event-command-support-gsm-widening-vs-state-refinement-ergonomics.md  8-composition-combinators-beyond-sequential-parallel-alternative-feedback-kleisli.md  9-profunctor-and-category-instances-on-symtransducer.md
docs/plans/: 1-sharpen-dsl-shape-for-symbolic-register-transducer.md  10-keiki-decider-facade-for-naive-decider-migration.md  11-composition-combinators-on-symtransducer.md  12-acceptor-projections-input-output-for-symtransducer.md  13-genview-th-splice-and-b-presentation-view-v-gadt.md  14-design-milestone-decompose-v1-escape-hatch-retirements-ofn-pmatchc-unsafecombine-static-check.md  15-edge-builder-monadic-dsl-for-authoring-symtransducer-edges.md  16-retire-ofn-and-mkout-from-keiki-core.md  17-retire-pmatchc-and-matchcmd-from-keiki-core.md  18-static-disjoint-check-on-update-retire-unsafecombine.md  19-multi-event-commands-via-edge-output-widening-gsm-expansion.md  2-sharpen-schema-evolution-for-events-and-registers.md  20-multi-event-commands-via-state-refinement-ergonomics.md  21-ergonomic-emit-for-keiki-builder-drop-redundant-inctor-and-add-field-keyed-record-sugar.md  22-performance-benchmarks-via-tasty-bench-with-a-realistic-order-cart-aggregate.md  23-nothunks-instances-for-regfile-and-symtransducer-state.md  24-composition-combinators-beyond-sequential-design-milestone.md  40-review-dsl-before-alpha-release.md  (+60 more)
jitsurei/: jitsurei.cabal
jitsurei/bench/: Bench.hs  README.md
jitsurei/src/Jitsurei/: CoreBankingSync.hs  EmailDelivery.hs  Loan.hs  LoanApplication.hs  LoanWorkflow.hs  OrderCart.hs  UserRegistration.hs  UserRegistrationV0.hs
jitsurei/test/: Spec.hs
jitsurei/test/Jitsurei/: CoreBankingSyncSpec.hs  EmailDeliveryBuilderSpec.hs  EmailDeliveryViewSpec.hs  LoanApplicationBuilderSpec.hs  LoanApplicationChainedSpec.hs  LoanApplicationMultiSpec.hs  LoanApplicationSpec.hs  LoanApplicationSymbolicSpec.hs  LoanApplicationViewSpec.hs  LoanSpec.hs  LoanWorkflowSpec.hs  OrderCartBuilderSpec.hs  OrderCartSpec.hs  OrderCartSymbolicSpec.hs  RoundTrip.hs  RoundTripSpec.hs  UserRegistrationBuilderSpec.hs  UserRegistrationChainedSpec.hs  UserRegistrationGSMSpec.hs  UserRegistrationMultiSpec.hs  UserRegistrationSpec.hs  UserRegistrationSymbolicSpec.hs  UserRegistrationV0Spec.hs  UserRegistrationViewSpec.hs
jitsurei/test/Jitsurei/Render/: MermaidLoanSpec.hs
keiki-codec-json/: CHANGELOG.md  CONTRIBUTING.md  README.md  keiki-codec-json.cabal
keiki-codec-json-test/: CHANGELOG.md  README.md  keiki-codec-json-test.cabal
keiki-codec-json-test/src/Keiki/Codec/JSON/: Test.hs
keiki-codec-json-test/src/Keiki/Codec/JSON/Test/: Golden.hs  GoldenFile.hs
keiki-codec-json-test/test/: Spec.hs
keiki-codec-json-test/test/Keiki/Codec/JSON/Test/: Demo.hs
keiki-codec-json-test/test/golden/: demo-regfile.value.json
keiki-codec-json/bench/: Bench.hs  baseline.csv
keiki-codec-json/src/Keiki/Codec/: JSON.hs
keiki-codec-json/src/Keiki/Codec/JSON/: Event.hs  TH.hs
keiki-codec-json/test/: Spec.hs
keiki-codec-json/test/Keiki/Codec/JSON/: Fixtures.hs  GoldenFileSpec.hs  GoldenSpec.hs  PropSpec.hs  SensitivitySpec.hs  THEventEvolutionSpec.hs  THEventSpec.hs  THSpec.hs
keiki-codec-json/test/golden/: exemplar-regfile.encoding.json  exemplar-regfile.value.json  exemplar-shape.json  maybe-regfile-just.encoding.json  maybe-regfile-just.value.json  maybe-regfile-nothing.encoding.json  maybe-regfile-nothing.value.json
keiki-codec-json/test/golden/event/: item-added.pre-defaults.json  item-added.v1.json  order-cancelled.v1.json  order-placed.v1.json  quantity-recorded.v1.json  quantity-recorded.v2.json
mori/: repo-id
nix/: haskell.nix  pre-commit.nix  treefmt.nix
site/: build.mjs
test/: Spec.hs
(+134 files in other folders)
