cabal-version:      3.0
name:               keiki
version:            0.1.0.0
synopsis:           Pure core for symbolic-register transducer event sourcing.
license:            BSD-3-Clause
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
copyright:          2026 Nadeem Bitar
category:           Control
build-type:         Simple
tested-with:        GHC == 9.10.3

common warnings
    ghc-options:        -Wall -Wcompat -Widentities
                        -Wincomplete-record-updates -Wincomplete-uni-patterns
                        -Wpartial-fields -Wredundant-constraints

common shared-extensions
    default-language:   GHC2024
    default-extensions: OverloadedLabels
                        OverloadedStrings
                        UndecidableInstances
                        FunctionalDependencies
                        DuplicateRecordFields
                        OverloadedRecordDot
                        AllowAmbiguousTypes

-- The library's symbolic analyses (sat, isBot, isSingleValuedSym) are
-- backed by SBV and require the z3 SMT solver to be available in PATH
-- at runtime. Install via: brew install z3 (macOS) or apt install z3
-- (Debian). The library will fail loudly if z3 is missing when those
-- analyses run; pure evaluation (delta/omega/step/reconstitute) does
-- not depend on z3.

library
    import:             warnings, shared-extensions
    exposed-modules:    Keiki.Core
                        Keiki.Symbolic
                        Keiki.Examples.UserRegistration
                        Keiki.Examples.UserRegistrationV0
    hs-source-dirs:     src
    build-depends:      base ^>= 4.20,
                        sbv >= 11.7 && < 15,
                        text ^>= 2.1,
                        time ^>= 1.12

test-suite keiki-test
    import:             warnings, shared-extensions
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      Keiki.CoreSpec
                        Keiki.SymbolicSpec
                        Keiki.Examples.UserRegistrationSpec
                        Keiki.Examples.UserRegistrationSymbolicSpec
                        Keiki.Examples.UserRegistrationV0Spec
    build-depends:      base ^>= 4.20,
                        keiki,
                        hspec ^>= 2.11,
                        sbv >= 11.7 && < 15,
                        text ^>= 2.1,
                        time ^>= 1.12
