cabal-version:      3.0
name:               keiki
version:            0.1.0.0
synopsis:           Pure core for symbolic-register transducer event sourcing.
license:            BSD-3-Clause
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
copyright:          2026 Nadeem Bitar
category:           Control
build-type:         Simple
tested-with:        GHC == 9.12.*

common warnings
    ghc-options:        -Wall -Wcompat -Widentities
                        -Wincomplete-record-updates -Wincomplete-uni-patterns
                        -Wpartial-fields -Wredundant-constraints

common shared-extensions
    default-language:   GHC2024
    default-extensions: OverloadedLabels
                        OverloadedStrings
                        UndecidableInstances
                        FunctionalDependencies
                        DuplicateRecordFields
                        OverloadedRecordDot
                        AllowAmbiguousTypes

-- The library's symbolic analyses (sat, isBot, isSingleValuedSym) are
-- backed by SBV and require the z3 SMT solver to be available in PATH
-- at runtime. Install via: brew install z3 (macOS) or apt install z3
-- (Debian). The library will fail loudly if z3 is missing when those
-- analyses run; pure evaluation (delta/omega/step/reconstitute) does
-- not depend on z3.

library
    import:             warnings, shared-extensions
    exposed-modules:    Keiki.Acceptor
                        Keiki.Builder
                        Keiki.Composition
                        Keiki.Core
                        Keiki.Decider
                        Keiki.Generics
                        Keiki.Generics.TH
                        Keiki.Internal.Slots
                        Keiki.NoThunks
                        Keiki.Profunctor
                        Keiki.Symbolic
                        Keiki.Examples.EmailDelivery
                        Keiki.Examples.OrderCart
                        Keiki.Examples.UserRegistration
                        Keiki.Examples.UserRegistrationV0
    hs-source-dirs:     src
    build-depends:      base ^>= 4.21,
                        nothunks >= 0.3 && < 0.4,
                        profunctors >= 5.6 && < 6,
                        sbv >= 11.7 && < 15,
                        template-haskell ^>= 2.23,
                        text ^>= 2.1,
                        time ^>= 1.12

test-suite keiki-test
    import:             warnings, shared-extensions
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      Keiki.AcceptorSpec
                        Keiki.BuilderSpec
                        Keiki.BuilderSpike
                        Keiki.CompositionSpec
                        Keiki.CompositionAlternativeSpec
                        Keiki.CompositionFeedback1Spec
                        Keiki.CoreApplyEventsSpec
                        Keiki.CoreSpec
                        Keiki.DeciderMultiSpec
                        Keiki.DeciderSpec
                        Keiki.Generics.THSpec
                        Keiki.NoThunksSpec
                        Keiki.ProfunctorSpec
                        Keiki.SymbolicSpec
                        Keiki.Examples.EmailDeliveryBuilderSpec
                        Keiki.Examples.EmailDeliveryViewSpec
                        Keiki.Examples.OrderCartBuilderSpec
                        Keiki.Examples.OrderCartSpec
                        Keiki.Examples.UserRegistrationBuilderSpec
                        Keiki.Examples.UserRegistrationChainedSpec
                        Keiki.Examples.UserRegistrationMultiSpec
                        Keiki.Examples.UserRegistrationSpec
                        Keiki.Examples.UserRegistrationSymbolicSpec
                        Keiki.Examples.UserRegistrationV0Spec
                        Keiki.Examples.UserRegistrationViewSpec
    build-depends:      base ^>= 4.21,
                        keiki,
                        deepseq ^>= 1.5,
                        hspec ^>= 2.11,
                        nothunks >= 0.3 && < 0.4,
                        profunctors >= 5.6 && < 6,
                        sbv >= 11.7 && < 15,
                        text ^>= 2.1,
                        time ^>= 1.12

benchmark keiki-bench
    import:             warnings, shared-extensions
    type:               exitcode-stdio-1.0
    hs-source-dirs:     bench
    main-is:            Bench.hs
    ghc-options:        -with-rtsopts=-A32m -fproc-alignment=64
    build-depends:      base ^>= 4.21,
                        keiki,
                        tasty-bench >= 0.4 && < 0.6,
                        text ^>= 2.1,
                        time ^>= 1.12
