cabal-version:      3.0
name:               keiki-codec-json
version:            0.1.0.0
synopsis:           Optional JSON codec and shape hash for keiki's RegFile.
description:
    Sibling package to keiki providing a JSON encoder, decoder, and
    streaming encoder for @RegFile rs@. The keiki core remains
    aeson-free; this package opts in. See keiki's @Keiki.Shape@ module
    for the GHC-upgrade-safe shape hash used to discriminate snapshots.
license:            BSD-3-Clause
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
copyright:          2026 Nadeem Bitar
category:           Codec
build-type:         Simple
tested-with:        GHC == 9.12.*

common warnings
    ghc-options:        -Wall -Wcompat -Widentities
                        -Wincomplete-record-updates -Wincomplete-uni-patterns
                        -Wpartial-fields -Wredundant-constraints

common shared-extensions
    default-language:   GHC2024
    default-extensions: OverloadedLabels
                        OverloadedStrings
                        UndecidableInstances
                        FunctionalDependencies
                        DuplicateRecordFields
                        OverloadedRecordDot
                        AllowAmbiguousTypes

library
    import:             warnings, shared-extensions
    exposed-modules:    Keiki.Codec.JSON
                        Keiki.Codec.JSON.TH
    hs-source-dirs:     src
    build-depends:      base ^>= 4.21,
                        aeson ^>= 2.2,
                        keiki,
                        template-haskell ^>= 2.23,
                        text ^>= 2.1

benchmark keiki-codec-json-bench
    import:             warnings, shared-extensions
    type:               exitcode-stdio-1.0
    hs-source-dirs:     bench
    main-is:            Bench.hs
    build-depends:      aeson ^>= 2.2,
                        base ^>= 4.21,
                        bytestring ^>= 0.12,
                        deepseq ^>= 1.5,
                        keiki,
                        keiki-codec-json,
                        tasty-bench ^>= 0.4 || ^>= 0.5,
                        text ^>= 2.1
    ghc-options:        -fproc-alignment=64
                        "-with-rtsopts=-A32m -T"

test-suite keiki-codec-json-test
    import:             warnings, shared-extensions
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      Keiki.Codec.JSON.Fixtures
                        Keiki.Codec.JSON.PropSpec
                        Keiki.Codec.JSON.SensitivitySpec
                        Keiki.Codec.JSON.GoldenSpec
                        Keiki.Codec.JSON.THSpec
    build-depends:      QuickCheck ^>= 2.15,
                        aeson ^>= 2.2,
                        base ^>= 4.21,
                        bytestring ^>= 0.12,
                        hspec ^>= 2.11,
                        keiki,
                        keiki-codec-json,
                        quickcheck-instances ^>= 0.3,
                        text ^>= 2.1,
                        time ^>= 1.12
